test/runtime/fail/import/multiline.hy

// expect error: Expected string after `,` in multi-import, found `\)`

import ("io",)
